# serielle-konsole

./: .gitignore  AUTHORS  Makefile.am  configure.in.in  serielle-konsole.desktop
kcmserielle/: AUTHORS  Makefile.am  kcmkonsole.cpp  kcmkonsoledialog.ui  kcmserielle.desktop  sessiondialog.ui  sessioneditor.cpp
konsole/: Makefile.am  TETty.cpp  TETty.h  TEWidget.h  konsole.cpp  konsole.h  main.cpp  session.cpp  session.h  sessioniface.h
other/: Makefile.am  firstserial.desktop  nulldevice.desktop
